Bug 1143885 - Fix transaction handling when requests are killed prematurely, r=khuey.